--- a/AugmentedReality.html
+++ b/AugmentedReality.html
@@ -95,7 +95,7 @@
 
   <nav class="text">
     &#10036
-    <a href="Home.html">Jessica Scott</a>
+    <a href="index.html">Jessica Scott</a>
     &#10036
     <br>
     <a href="AugmentedReality.html" style="background-color: red; color: white;">A.R</a>
