--- a/VideoArt.html
+++ b/VideoArt.html
@@ -66,7 +66,7 @@
 
   <nav class="text">
     &#10036
-    <a href="Home.html">Jessica Scott</a>
+    <a href="index.html">Jessica Scott</a>
     &#10036
     <br>
     <a href="AugmentedReality.html">A.R</a>
