--- a/Photography.html
+++ b/Photography.html
@@ -79,14 +79,16 @@
     &#10006
     <a href="Animation.html">ANIMATION</a>
     &#10006
+    <a href="Drawings.html">DRAWING</a>
+    &#10006
     <a href="GraphicDesign.html">GRAPHIC DESIGN</a>
     &#10006
     <a href="VideoArt.html">VIDEO ART</a>
     &#10006
     <a href="UI-UX.html">UI/UX</a>
-    &#10006
-    <a href="Photography.html" style="background-color: red; color: white;">PHOTOGRAPHY</a>
     <br>
+    <a href="Photography.html" style="background-color: red; color: white;">PHOTOGRAPHY</a>
+    &#10006
     <a href="AboutMe.html">ABOUT ME</a>
   </nav>
 
@@ -260,7 +262,7 @@
 
   <div class="nav">
     <div class="p6">
-      &#10006 Business Email: jessicascottart@proton.com &#10006
+      &#10006 Contact me at <a href="mailto:jessicascottart@proton.com">jessicascottart@proton.com</a> &#10006
     </div>
   </div>
 
