--- a/index.html
+++ b/index.html
@@ -92,15 +92,17 @@
       &#10006
       <a href="Animation.html">ANIMATION</a>
       &#10006
+      <a href="Drawings.html">DRAWING</a>
+      &#10006
       <a href="GraphicDesign.html">GRAPHIC DESIGN</a>
       &#10006
       <a href="VideoArt.html">VIDEO ART</a>
       &#10006
       <a href="UI-UX.html">UI/UX</a>
-      &#10006
+      <br>
       <a href="Photography.html">PHOTOGRAPHY</a>
-    <br>
-    <a href="AboutMe.html">ABOUT ME</a>
+      &#10006
+      <a href="AboutMe.html">ABOUT ME</a>
     </nav>
   </div>
 
