--- a/AboutMe.html
+++ b/AboutMe.html
@@ -102,15 +102,18 @@
     &#10006
     <a href="Animation.html">ANIMATION</a>
     &#10006
+    <a href="Drawings.html">DRAWING</a>
+    &#10006
     <a href="GraphicDesign.html">GRAPHIC DESIGN</a>
     &#10006
     <a href="VideoArt.html">VIDEO ART</a>
     &#10006
     <a href="UI-UX.html">UI/UX</a>
-    &#10006
-    <a href="Photography.html">PHOTOGRAPHY</a>
     <br>
+    <a href="Photography.html">PHOTOGRAPHY</a>
+    &#10006
     <a href="AboutMe.html" style="background-color: red; color: white;">ABOUT ME</a>
+
   </nav>
     
   <div class="text">
@@ -136,7 +139,7 @@
 
   <div class="nav">
     <div class="p6">
-      &#10006 Business Email: jessicascottart@proton.com &#10006
+      &#10006 Contact me at <a href="mailto:jessicascottart@proton.com">jessicascottart@proton.com</a> &#10006
     </div>
   </div>
 
