--- a/Photography.html
+++ b/Photography.html
@@ -262,7 +262,7 @@
 
   <div class="nav">
     <div class="p6">
-      &#10006 Contact me at <a href="mailto:jessicascottart@proton.com">jessicascottart@proton.com</a> &#10006
+      &#10006 Contact me at <a href="mailto:jessicascottart@protonmail.com">jessicascottart@protonmail.com</a> &#10006
     </div>
   </div>
 
