--- a/UI-UX.html
+++ b/UI-UX.html
@@ -155,6 +155,21 @@
 
     <!--------------------------------------------------------------->
 
+        <div id="sdscontainer">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/qb0mRaslmTQ?si=POwLwBxkUBZE-a-J" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+
+    <div class="text">
+      <h3>Travel Buddies Demo Video(2024)</h3>
+        <h2>Made with Figma</h2>
+      <p class="p4">
+        While studying abroad, my program had groups come up with an app idea. Using Figma we created a minimum viable product (MVP) prototype, tested it on users, analyzed, and revamped after each round of testing.
+        <a href="https://www.figma.com/proto/3e4CUBdU3H56klXxVSFEoC/Travel-buddies-app?type=design&node-id=142-764&t=pZweuIMpSr9UY1nr-0&scaling=scale-down&page-id=0%3A1&starting-point-node-id=142%3A764&show-proto-sidebar=1" title="Travel Buddies Prototype" target="_blank" alt="Travel Buddies Prototype"><em>Click to view prototype</em></a>
+      </p>
+    </div>
+
+      <!--End of Red Kors Input-->
+
         <!--Start of Optimist Input-->  
 
     <div id="sdscontainer">
