--- a/AugmentedReality.html
+++ b/AugmentedReality.html
@@ -148,8 +148,8 @@
   </div>
 
     <div class="text">
-    <h3>Welcome In (2025)</h3>
-    <h2>Made with Blender, 3D Sketchfab models, and Niantic 8th Wall</h2>
+    <h3>Welcome In(2025)</h3>
+    <h2>Made with Blender, 3D Sketchfab models, Scaniverse, and Niantic 8th Wall</h2>
     <p class="p4">
       This is an augmented reality experience with three different interactions to explore, all pertaining to dreams. There is a peaceful dream, which has the themes of whimsy and relaxation. There is a nightmare, depicting darker themes and uncomfortability. Finally there is a confusing dream, which shows an odd assortment of things and settings. This piece is a conversation between the act of dreaming and augmented reality, highlighting the inherent otherworldly nature they both possess.
     </p>
